--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server:
   port: 9000
   servlet:
@@ -10,8 +11,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/url_shortener?serverTimezone=Asia/Seoul
     username: root
-    password: instiz
-    driver-class-name : com.mysql.cj.jdbc.Driver
+    password: 9722
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
     open-in-view: true
