--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	//valid
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	//security
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.5'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
