--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,25 +11,16 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/url_shortener?serverTimezone=Asia/Seoul
-    username:
-    password:
+    username: root
+    password: 9722
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
     open-in-view: true
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
-      javax:
-        persistence:
-          sharedCache:
-            mode: ENABLE_SELECTIVE
-      hibernate:
-        cache:
-          use_second_level_cache: true
-          region:
-            factory_class: org.hibernate.cache.jcache.internal.JCacheRegionFactory
         format_sql: true
   jwt:
     secret: june970617
